Changes relative to tre-0.19:
  * Fixed first time install.
  * CL: *ARGV* has the command-line arguments.
  * DEFSTRUCT: Generated macro DEF-name does not require the first argument
    to be of the structs name any more.
  * Inside methods package "GLOBAL" now tells that a symbol should not be
    thisified, allowing to access the symbol of the same name outside the
    class if it's being used as a method name already.
    E.g.: If you have a method named AREF and you want to access the global
    AREF function, just write 'global:aref' in the function call.
  * NEW without arguments does not create a JSON object but a standard object.
    Use MAKE-JSON-OBJECT.
  * AREF does not work an strings anymore. Use CHAR.
  * New abbreviating macros:
       …: LIST
      *>: APPLY
      ~>: FUNCALL
      +@: MAPCAN
      @n: MAPTIMES
  * PHP classes: array accessors may be overloaded by members AREF, =-AREF and
    DELETE-AREF.  PHP requires them all to be there if used.
  * Added VECTOR?.
  * EVERY much faster on lists.
  * Added DIRECTORY to get directory lists.
  * Added DUMP to CL target.
  * Added GETENV.
  * Added standard set functions SET-DIFFERENCE,
    SET-EXCLUSIVE-OR and SUBSET?.
  * New ARGUMENTS returns command-line arguments.
  * New GETENV returns environment variables.
  * File ~/.tre.sh is shell evaluated to update environment variables
    before launching tré.
  * JS class methods may be declared static.
  * PHP class members and methods may be declared static,
    protected or private.
  * Return values of constructors are ignored.
  * PHP classes may inherit.
  * Removed obsolete JavaScript DOM features:
    * GET-CANVAS-BY-CLASS-NAME
    * ancestor getters
    * FORM, IFRAME and VIDEO element utilities.
  * TRE-ELEMENT:
    * All event methods have been replaced by method ON, like
      done in jQuery.
    * Historic class, ID and name attribute methods have been
      removed.
    * General attribute accessors have been replaced by methods