@@ -2,7 +2,7 @@
 
 set -e
 
-mkdir -p compiled/data
+mkdir -p compiled/data/mysql
 cp -r docker docker-compose.yml db-config.php compiled/
 tre make-server.lisp
 tre make-client.lisp
