@@ -1,30 +1,40 @@
-app:
-  build: ./docker/httpd
-  links:
-    - db
-  volumes_from:
-    - appdata
-  ports:
-    - 19020:80
+version: "3.9"
 
-db:
-  image: mariadb
-  volumes_from:
-    - dbdata
-  ports:
-    - 3306:3306
-  environment:
-    - MYSQL_ROOT_PASSWORD=secret
-    - MYSQL_DATABASE=tre_project
-    - MYSQL_USER=tre
-    - MYSQL_PASSWORD=secret
+services:
+  app:
+    build:
+      context: ./docker/httpd
+    links:
+      - db
+    network_mode: bridge
+    ports:
+      - "19020:80"
+    volumes:
+      - appdata:/var/www/html:rw
 
-appdata:
-  image: tianon/true
-  volumes:
-    - ./:/var/www/html/
+  db:
+    image: mysql:latest
+    network_mode: bridge
+    environment:
+      MYSQL_DATABASE: fnord
+      MYSQL_USER: fnord
+      MYSQL_PASSWORD: fnord
+      MYSQL_ROOT_PASSWORD: fnord
+    ports:
+      - "3306:3306"
+    volumes:
+      - dbdata:/var/lib/mysql:rw
 
-dbdata:
-  image: tianon/true
-  volumes:
-    - ./data/mysql:/var/lib/mysql
+volumes:
+  appdata:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ./
+  dbdata:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ./data/mysql
