@@ -1,4 +1,5 @@
 Changes relative to tre-0.19:
+  * Examples: Updated docker-compose configurations to version 3.
   * Fixed first time install.
   * CL: *ARGV* has the command-line arguments.
   * DEFSTRUCT: Generated macro DEF-name does not require the first argument
